# HSPlanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: damage.rs  scrape-affixes.mjs  scrape-bases.mjs  scrape-gems.mjs  scrape-items.mjs  scrape-runewords.mjs  scrape-sets.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_parity.rs  dump_tree_classify.rs
src-tauri/icons/: icon.icns
src-tauri/src/: damage.rs  lib.rs  main.rs  save_file.rs
src-tauri/src/calc/: affix.rs  build.rs  commands.rs  custom_stat.rs  data.rs  mod.rs  passive.rs  rank.rs  season.rs  star_scaling.rs  stats.rs  subskill.rs  types.rs
src-tauri/src/calc/skills/: attack.rs  damage.rs  mod.rs  weapon.rs
src-tauri/src/calc/tree/: mod.rs  parse.rs
src-tauri/src/suggest_engine/: aggregate.rs  algo.rs  command.rs  engine.rs  mod.rs  parser.rs  types.rs
src-tauri/tests/: parity.rs  warmup_timing.rs
src-tauri/tests/fixtures/: parity.json
src/components/: AffixPickerModal.tsx  AugmentPickerModal.tsx  BottomBar.tsx  BuildsMenu.tsx  CornerMarks.tsx  CrystalModPickerModal.tsx  Dropdown.tsx  FlashOnChange.tsx  GearItemModal.tsx  HoverPortal.tsx  ItemConfigurator.tsx  ItemEditModal.tsx  ItemTextEditorModal.tsx  ItemTooltip.tsx  JewelSocketModal.tsx  LeftStatsPanel.tsx  Logo.tsx  Modal.tsx  NetChangeRow.tsx  PickerModal.tsx  ProfileSwitcher.tsx  SearchableSelect.tsx  SeasonConversionModal.tsx  SeasonErrorBanner.tsx  SeasonSwitcher.tsx  SeasonToast.tsx  SettingsModal.tsx  ShareButton.tsx  SkillIconImage.tsx  Slider.tsx  SocketPickerModal.tsx  SourceTooltip.tsx  StartupBuildModal.tsx  StorageErrorBanner.test.tsx  StorageErrorBanner.tsx  SubtreeOverlay.tsx  SuggestNodesModal.tsx  Tooltip.tsx  TreeNodeMiniMap.tsx  UpdateModal.test.tsx  (+2 more)
src/data/: affixes.json  augments.json  crystals.json  ether-tree.json  game-config.json  hero-siege-tree.json  index.season.test.ts  index.ts  item-granted-skills.json  mercenaries.json  node-icons.json  runewords.json  sets.json  subtree-template.ts  tree-nodes.json
src/hooks/: useBuildPerformanceDeps.ts  useCalcResult.test.ts  useCalcResult.ts  useOutsideClick.ts  useSkillDamage.ts  useWeaponDamage.ts
src/lib/: motion.ts
src/store/: autoSave.test.ts  autoSave.ts  build.test.ts  build.ts  itemRules.ts  settings.test.ts  settings.ts  storageError.test.ts  storageError.ts
src/test/: setup.ts
src/types/: build.ts  character.ts  ether.ts  game.ts  index.ts  item.ts  mercenary.ts  relic.ts  skill.ts  talent.ts
src/utils/: buildPerformance.ts  compactNumber.test.ts  compactNumber.ts  damageColors.ts  gameSave.ts  icon.ts  imageUrl.ts  initRangeInputs.ts  installUpdate.ts  itemSerialize.ts  itemTextFormat.test.ts  itemTextFormat.ts  (+25 more)
(+205 files in other folders)
