[package]
name = "HSPlanner"
version = "0.9.1" # inert: app version comes from package.json (see tauri.conf.json)
description = "HSPlanner"
authors = ["zium1337"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.31"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
regex = "1.12.3"
once_cell = "1.21.4"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
